style.css
* {
    margin: 0;
}

body {
    font-family: 'Source Sans Pro', sans-serif;
}

h2, p {
    font-size: 1rem;
}

.main-header {
    display: flex;
    justify-content: space-evenly;
    border-bottom: 1px solid #C6C6C6;
    padding: 10px 0;
    align-items: center;
}

.location {
    font-size: 0.8rem;
}

.logo {
    width: 127px;
}

.post {
    max-width: 400px;
    margin: auto;
}

.profile-image {
    width: 50px;
    border-radius: 50%;
}

.post-header {
    display: flex;
    align-items: center;
    gap: 7px;
    padding: 10px;
}

.post-img {
    width: 100%;
}

.post-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.post-caption {
    display: flex;
    gap: 7px;
}

